--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="date">May 8, 2019</string>
     <string name="rent">RENT FROM $4.99</string>
     <string name="buy">BUY FROM $9.99</string>
+    <string name="poster2">poster</string>
+    <string name="thinline">border</string>
+    <string name="poster1">poster</string>
+
 </resources>
