--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="poster2">poster</string>
     <string name="thinline">border</string>
     <string name="poster1">poster</string>
+    <string name="thinline1">border</string>
 
 </resources>
