--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,11 @@
     <string name="thinline">border</string>
     <string name="poster1">poster</string>
     <string name="thinline1">border</string>
+    <string name="rate">242 ratings</string>
+    <string name="iconrate">7.2</string>
+    <string name="family">Family</string>
+    <string name="percent">71%</string>
+    <string name="similar">Similar</string>
+    <string name="story">Aladdin is a 2019 American musical fantasy drama film produced by Walt Disney Pictures. Directed by Guy Ritchie, from a script he co-wrote with John August, it is a live-action/CGI adaptation of Disneys 1992 animated film of the same name, which itself is based on the eponymous tale from One Thousand and One Nights.[1][a] The film stars Will Smith, Mena Massoud, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad, Billy Magnussen, and Numan Acar, as well as the voices of Alan Tudyk and Frank Welker, the latter of whom reprises his roles from all previous media.</string>
 
 </resources>
